Fixed spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,3 +39,7 @@ body {
 .display-stats {
   margin-left: 28%;
 }
+
+.cursor-custom {
+  cursor: pointer
+}
